--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h1>Hola Coders!</h1>
-    </body>
+<head>
+
+</head>
+
+<body>
+	<h1>Hola Coders!</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nemo consequuntur rem corrupti sit quas vel
+		exercitationem architecto nostrum aperiam, voluptas blanditiis impedit cum reiciendis excepturi earum! Numquam,
+		quas deserunt?</p>
+</body>
+
 </html>
